--- a/Chave de Ankh/Project/ChaveDeAnkh/pom.xml
+++ b/Chave de Ankh/Project/ChaveDeAnkh/pom.xml
@@ -18,6 +18,11 @@
         <artifactId>langchain4j-ollama</artifactId>
         <version>0.29.1</version>
     </dependency>
+    <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.33</version>
+    </dependency>
 
     <!-- Dependência org.testcontainers -->
     <dependency>
