--- a/Chave de Ankh/Project/ChaveDeAnkh/pom.xml
+++ b/Chave de Ankh/Project/ChaveDeAnkh/pom.xml
@@ -37,6 +37,14 @@
             <version>1.19.7</version>
             <type>jar</type>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/dev.langchain4j/langchain4j -->
+        <dependency>
+            <groupId>dev.langchain4j</groupId>
+            <artifactId>langchain4j</artifactId>
+            <version>0.30.0</version>
+            <type>jar</type>
+        </dependency>
+
     </dependencies>
 
 </project>
