--- a/Chave de Ankh/Project/ChaveDeAnkh/pom.xml
+++ b/Chave de Ankh/Project/ChaveDeAnkh/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>langchain4j</artifactId>
             <version>0.30.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.netbeans.external</groupId>
+            <artifactId>AbsoluteLayout</artifactId>
+            <version>RELEASE130</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
